# nget

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
scripts/: ci-checks.bat  pre-push-checks.bat  pre-push-checks.sh
src/: lib.rs  main.rs
src/utils/: cli.rs  client_utils.rs  enums.rs  error.rs  file.rs  file_utils.rs  http.rs  mod.rs  proxy_utils.rs  resolver_utils.rs  url_utils.rs
tests/: http_tests.rs  proxy_tests.rs
text/: index.html
