[package]
name = "nget"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.6"
url = "2.5.4"
futures = "0.3.31"
indicatif = "0.17.9"
futures-util = { version = "0.3.0" }