[package]
name = "nget"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "stream", "http2", "native-tls-alpn", "socks"] }
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.6"
url = "2.5.4"
futures = "0.3.31"
indicatif = "0.17.9"
futures-util = { version = "0.3.0" }
once_cell = "1.20.2"
http = "1.2.0"
h2 = "0.4.7"
tokio-rustls = "0.26.1"
webpki = "0.22.4"
env_logger = "0.11.5"
webpki-roots = "0.26.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
log = "0.4.22"
hickory-resolver = "0.24.2"

[dev-dependencies]
wiremock = "0.6.2"